# OneResume

./: .gitignore  README.md  pyproject.toml
app/: config.py
app/domain/: resume_draft.py
app/models/: __init__.py  profile.py  resume.py  user.py
app/repositories/: __init__.py
app/routers/: profiles.py  users.py
app/schemas/: __init__.py
app/services/: ats_optimizer.py  export_service.py  jd_analyzer.py  llm_service.py  orchestrator.py  resume_assembler.py  scoring_engine.py
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: jd.py  user.py
backend/app/repositories/: __init__.py
backend/app/routers/: jd.py  profiles.py  resumes.py  users.py
backend/app/schemas/: __init__.py
backend/app/services/: embedding_service.py  latex_renderer.py  relevance_selector.py
backend/app/templates/: resume.tex.j2
backend/tests/: conftest.py  test_edge_cases.py  test_embedding_service.py  test_llm_service.py  test_profile_crud.py  test_resume_assembler.py  test_scoring_engine.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/dashboard/: layout.module.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/: GeometricCard.module.css  GeometricCard.tsx  Navbar.module.css  Navbar.tsx  StatusCountdown.module.css  StatusCountdown.tsx
frontend/src/lib/: api.ts
tests/: test_ats_optimizer.py  test_embedding_service.py  test_integration.py  test_jd_analyzer.py  test_relevance_selector.py
(+8 files in other folders)
