[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oneresume"
version = "0.1.0"
description = "AI-Powered Role-Specific Resume Generation Platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "google-generativeai>=0.3.0",
    "pinecone>=5.0.0",
    "numpy>=1.24.0",
    "python-docx>=1.1.0",
    "Jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "passlib[bcrypt]>=1.7.0",
    "bcrypt>=4.0.0,<4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
